# Proxy-Empire

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  clean_sources.py  main.py  proxychecker.py  proxyscraper.py  proxystore.py  pyproject.toml  sources.jsonc  utils.py
assets/: sources.json  sources.jsonc  validators.json
data/: countries.jsonc
docs/: conf.py  installation.md  usage.md
docs/source/: conf.py  index.md  installation.md  usage.md
model/: data_classes.py  database.py  models.py  schemas.py
scrapers/: __init__.py  main.py
stores/: main.py
stores/model/: __init__.py  data_classes.py  database.py  models.py  schemas.py
validators/: main.py  proxychecker.py  validators.py
